Migrate to 12.0.0 :camel:  (#49)
* Raise project to 12.0.0-SNAPSHOT
* Update maven version to 12.0.0-SNAPSHOT
* Raise project to 12.0.0-SNAPSHOT
* Update maven version to 12.0.0-SNAPSHOT
* Update workflow actions to v5
* migrate to v12 APIs
* Fix warning in data class
* Update template
* Remove deprecated in test project

---------

Co-authored-by: nqhoan-axonivy <hoan.nguyen01@axonactive.com>